# ChangeLog for media-radio/tucnak2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/tucnak2/ChangeLog,v 1.13 2009/10/29 02:46:52 darkside Exp $

*tucnak2-2.28 (29 Oct 2009)

  29 Oct 2009; Jeremy Olexa <darkside@gentoo.org> +tucnak2-2.28.ebuild:
  Version bump, ebuild by Thomas Beierlein

  20 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  -files/tucnak2-2.16-doc.diff, -files/tucnak2-2.17-appname.diff,
  -files/tucnak2-2.19-appname.diff, -files/tucnak2-2.20-hamlib.diff,
  -tucnak2-2.23.ebuild, -tucnak2-2.25.ebuild:
  remove old ebuilds/patches

  02 Aug 2009; Markus Meier <maekke@gentoo.org> tucnak2-2.26.ebuild:
  x86 stable, bug #278691

  27 Jul 2009; <chainsaw@gentoo.org> tucnak2-2.26.ebuild:
  Marked stable on AMD64 as requested by Hannes Jochriem in bug #278691.
  Compile-tested with USE="alsa -ftdi -gpm -hamlib" on a Core2 Duo.

*tucnak2-2.27 (23 Jul 2009)

  23 Jul 2009; Jeremy Olexa <darkside@gentoo.org> +tucnak2-2.27.ebuild:
  Version bump, bug 278691

*tucnak2-2.26 (20 May 2009)

  20 May 2009; Jeremy Olexa <darkside@gentoo.org> -tucnak2-2.18.ebuild,
  -tucnak2-2.19.ebuild, -tucnak2-2.20.ebuild, +tucnak2-2.26.ebuild:
  Version bump and remove old

*tucnak2-2.25 (17 Apr 2009)

  17 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/tucnak2-2.25-appname.diff, +tucnak2-2.25.ebuild:
  Version bump by Thomas Beierlein

*tucnak2-2.23 (27 Dec 2008)

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org> +tucnak2-2.23.ebuild:
  version bump by Thomas Beierlein

  19 Dec 2008; Jeremy Olexa <darkside@gentoo.org>
  +files/tucnak2-2.20-hamlib.diff, tucnak2-2.20.ebuild:
  add patch to tucnak2-2.20 to allow build, by Thomas Beierlein. bug 251195

*tucnak2-2.20 (08 Dec 2008)

  08 Dec 2008; Jeremy Olexa <darkside@gentoo.org> +tucnak2-2.20.ebuild:
  version bump, tested by Thomas Beierlein

  25 Nov 2008; Jeremy Olexa <darkside@gentoo.org>
  files/tucnak2-2.19-appname.diff, files/tucnak2-2.19-doc.diff: