@@ -3,8 +3,10 @@ AUX tucnak2-2.25-appname.diff 870 RMD160 55e3bc30d5aa6c3fc6b2f70e58d74b3c09654d6
 DIST tucnak2-2.26.tar.gz 2634776 RMD160 7aa32c179539c95f9fda8680d5733fe91d07c19e SHA1 3f04a2d5b93f7ac390726d84696ed570c985a318 SHA256 f4f48a13aba14c0dee0604579d3fc4fac57a51058e3a28cd9b57f3d7b313a059
 DIST tucnak2-2.27.tar.gz 2637406 RMD160 1e12dd8a19d0cc8398b983dad86735a84bd37bb7 SHA1 e30fef436a67ddfb74ac8bf68ee2f683dc9e15bb SHA256 0d4ad6ce18733b79ee626829d484cea78af52f3c7f8615947f5b7c81c05e1a06
 DIST tucnak2-2.28.tar.gz 2643365 RMD160 951e167f8878073804a0849fab21db676c12f4c8 SHA1 de4fb7cbe02f798a505bf447ccb23a78f5da6f4e SHA256 073731481e3f4705b0b5d2810ce892d4f4d051f19e417a4bf490f939b7a4d4ea
+DIST tucnak2-2.29.tar.gz 2663913 RMD160 141e4288f5bf3f2fe7497caab945236888a1f4b0 SHA1 9493828aa4b66130bf6e8eca01428abcd8363cee SHA256 14be0c3981406743de14f86f8d4c1c8209436f90633a812ea52399bfc78b66d9
 EBUILD tucnak2-2.26.ebuild 1564 RMD160 3f001e0af4cf8b196e4b23644562c8d3bcdade9e SHA1 4ca64a53bd702af9b05714ccd184b9adb6eb6de9 SHA256 8b9c1f58967c8412072710a0e47499039becc528f63b5ced1c5147bd0fc7e59b
 EBUILD tucnak2-2.27.ebuild 1568 RMD160 b5322158f9fb0565ccc254483a91d93d1b7f03a8 SHA1 ba1e6cdb7ccf997616b34c6b5b3a54384346a38c SHA256 51df5216a99314fc180378b0047c3a3d3dd4d9047f55d7254fb9364405548dbe
 EBUILD tucnak2-2.28.ebuild 2033 RMD160 559082be60371ff4f3a887b1de6eb2d22d8f32d0 SHA1 f4ac9e3ba9f8f7526e9de59b50cb51ec77a272dc SHA256 7fae0ae13d895d718b7ef7facd428a28b9eaf268eebcd144adfcdf8043057b57
-MISC ChangeLog 2558 RMD160 40bb45c97d0179541cc941b4f48c7494806de8af SHA1 b58b9de4a0bbb11697db49b13e4abb74fd394282 SHA256 1e766ff89a3035643f52e07d07ff7bbfb7ffce448ae09760df1c56ce4457aae9
+EBUILD tucnak2-2.29.ebuild 2033 RMD160 bc79b3b452e53e954a9875a1bef1833da727896f SHA1 2b5e0bf2e9e61b3e3b8be16ba0e9c3346928853d SHA256 21016eb9e2eff37daea4525753c82dcc8fe8667db179620152f8de5a7a26bde8
+MISC ChangeLog 2703 RMD160 d10f8bc7e6e018a8b4c868a2c0f7358c3dac17ca SHA1 0f686b991091479665c9d5bb300196d59a8254c0 SHA256 b24058c38e5e0bbc80315fecc506737f1e7ba9e78b605bd87a0bcefad8b4a4fb
 MISC metadata.xml 621 RMD160 e022a641e9d50b34cf33c82c7040b1ae6294c674 SHA1 ded22260393f0044d95fdd641b26eaeda4ad056c SHA256 622cb69f976f9dee2a4ec8c8885c6ff0211f75b9a098ddcc6950fb339d667005
