@@ -1,6 +1,11 @@
 # ChangeLog for media-radio/tucnak2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/tucnak2/ChangeLog,v 1.13 2009/10/29 02:46:52 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/tucnak2/ChangeLog,v 1.14 2009/11/19 17:48:42 darkside Exp $
+
+*tucnak2-2.29 (19 Nov 2009)
+
+  19 Nov 2009; Jeremy Olexa <darkside@gentoo.org> +tucnak2-2.29.ebuild:
+  Version bump, ebuild by Thomas Beierlein
 
 *tucnak2-2.28 (29 Oct 2009)
 
